--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fried Chicken</title>
 </head>
 
 <body>
-    <h1>"Odin Recipes"</h1>
-    <a href="./recipes/fried-chicken.html">Fried Chicken</a>
+    <h1>Fried Chicken</h1>
+    <a href="../index.html">Homepage</a>
 </body>
 
 </html>
