Finish Fried Chicken Recipe

--- a/recipes/fried-chicken.html
+++ b/recipes/fried-chicken.html
@@ -10,6 +10,40 @@
 <body>
     <h1>Fried Chicken</h1>
     <a href="../index.html">Homepage</a>
+    <img src="https://www.allrecipes.com/thmb/Ip_B-cVEhaT1H4X_4vU9d3tdN8Q=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/8805-Crispy-Fried-Chicken-PICS-Beauty-4x3-240055e7b52840ff90d1c05d556db2e8.jpg"
+        alt="Picture of fried chicken">
+    <h2>Description</h2>
+    <p>This is the only crispy fried chicken recipe you'll ever need. Why? It combines all the tried-and-true tricks to
+        ensure the juiciest, most flavorful, crispiest chicken every time. </p>
+    <p> What Makes This Fried Chicken So Crispy?
+        <br>There are a few reasons this crispy fried chicken works so well:
+        <br>Allowing the buttermilk-flour mixture to come to a paste-like consistency is key to a crispiness on the
+        outside and juiciness on the inside.
+        <br>Most fried chicken is cooked at a high temperature throughout the frying process. This one, however, only
+        starts at a very high heat — after browning, the heat is reduced for about 30 minutes. You'll turn up the
+        temperature again at the end, locking in that crispy texture.
+        <br>Paprika adds smoky flavor and has a low smoke point, which helps with browning the chicken.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Chicken</li>
+        <li>Buttermilk</li>
+        <li>Flour</li>
+        <li>Seasonings</li>
+        <li>Oil</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li> <strong>Make the Breading:</strong> Combine the flour, paprika, salt, and pepper in a zip-top bag.
+            Seal the bag and shake until well-combined. </li>
+        <li> <strong>Dredge the Chicken:</strong> Pour buttermilk into a shallow bowl, then dip the chicken (on both
+            sides) until it's completely soaked in buttermilk. Place the soaked chicken in the bag with flour mixture,
+            seal, and shake well to coat. Transfer the coated chicken to a baking sheet, and cover. Allow the flour
+            coating to become a paste-like consistency. </li>
+        <li> <strong>Fry the Chicken:</strong> Pour the oil in a skillet and bring it to high heat. Brown the chicken on
+            both sides, then reduce the heat, cover the skillet, and cook for about 30 minutes. Remove the cover, return
+            the heat to high, and fry until extra crispy. Drain the chicken on paper towels. </li>
+    </ol>
 </body>
 
 </html>
