Fix description of avocado milkshake

--- a/recipes/avocado-milkshake.html
+++ b/recipes/avocado-milkshake.html
@@ -16,15 +16,14 @@
     <p>An Avocado milkshake is a creamy, nutritious, and refreshing beverage popular in Southeast Asia, Brazil, and
         Morocco, made by blending ripe avocado with milk and a sweetener. The avocado's healthy fats provide a rich,
         smooth, and filling texture, often without needing ice cream </p>
-    <p> What Makes This Avocado Milkshake So Crispy?
-        <br>There are a few reasons this crispy Avocado Milkshake works so well:
-        <br>Allowing the buttermilk-flour mixture to come to a paste-like consistency is key to a crispiness on the
-        outside and juiciness on the inside.
-        <br>Most Avocado Milkshake is cooked at a high temperature throughout the frying process. This one, however,
-        only
-        starts at a very high heat — after browning, the heat is reduced for about 30 minutes. You'll turn up the
-        temperature again at the end, locking in that crispy texture.
-        <br>Paprika adds smoky flavor and has a low smoke point, which helps with browning the chicken.
+    <p> The avocado milkshake is highly versatile and can be customized to suit personal preferences.
+        <br>For a thicker shake: Add more avocado, a frozen banana, or a scoop of vanilla ice cream.
+        <br>For a thinner consistency: Add more milk until the desired texture is reached.
+        <br>Flavor enhancements: Incorporate ingredients like cocoa powder for a chocolate avocado milkshake, a squeeze
+        of fresh lime juice to brighten the flavor and prevent browning, or warm spices like cinnamon.
+        <br>Nutritional boost: Add chia seeds, protein powder, or a handful of spinach for extra nutrients.
+        <br>Vegan option: Use plant-based milk (almond, soy, or coconut milk) instead of dairy milk.
+        <br>Southeast Asian style: Use gula melaka (palm sugar) or sweetened condensed milk as the sweetener.
     </p>
     <h2>Ingredients</h2>
     <ul>
