--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <h1>"Odin Recipes"</h1>
     <a href="./recipes/fried-chicken.html">Fried Chicken</a>
+    <a href="./recipes/fried-rice.html">Fried Rice</a>
+    <a href="./recipes/avocado-milkshake.html">Avocado Milkshake</a>
 </body>
 
 </html>
